--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "license": "UNLICENSED",
   "scripts": {
-    "start": "nodemon ./server.js --ignore src/ -e js,html,css",
-    "build": "rimraf dist && cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "dev": "nodemon ./server.js --ignore src/ -e js,html,css",
+    "prod": "rimraf dist && cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
     "async": "^2.1.4",
